--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
   "require":{
     "php":">=5.3.0",
     "filp/whoops":"*",
-    "symfony/var-dumper":"*"
+    "symfony/var-dumper":"*",
+    "joseph-lenton/php-error": "dev-master",
+    "catfan/medoo":"*"
   }
 }
